update server endpoint

--- a/fr-with-server.html
+++ b/fr-with-server.html
@@ -11,7 +11,7 @@
 <div class="header-label">Web Archive + Preserved Server</div>
 <replay-web-page
 coll="filmr"
-config='{"es": {"https://filmingrevolution.supdigital.org/": "http://fr.pres.local"}}'
+config='{"es": {"https://filmingrevolution.supdigital.org/": "https://fr.sup.webrecorder.net/"}}'
 replayBase="https://replayweb.page/"
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
