use local replay iframe to fix safari

--- a/fr-no-server.html
+++ b/fr-no-server.html
@@ -11,7 +11,7 @@
 <div class="header-label">Web Archive Only</div>
 <replay-web-page
 coll="filmr-wa"
-replayBase="https://replayweb.page/"
+replayBase="/replay/"
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
 </body>
