--- a/fr-with-server.html
+++ b/fr-with-server.html
@@ -12,7 +12,7 @@
 <replay-web-page
 coll="filmr"
 config='{"es": {"https://filmingrevolution.supdigital.org/": "https://fr4-sup.webrecorder.net/"}}'
-replayBase="https://replayweb.page/"
+replayBase="/replay/"
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
 </body>
