--- a/fr-no-server.html
+++ b/fr-no-server.html
@@ -10,8 +10,9 @@
 </header>
 <div class="header-label">Web Archive Only</div>
 <replay-web-page
-coll="filmr-wa"
+coll="filmr-wao"
 replayBase="/replay/"
+config='{"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]}'
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
 </body>
