style tweaks, support deep-link

--- a/fr-no-server.html
+++ b/fr-no-server.html
@@ -12,6 +12,7 @@
 <replay-web-page
 coll="filmr-wao"
 replayBase="/replay/"
+deepLink="true"
 config='{"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]}'
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
