--- a/fr-with-server.html
+++ b/fr-with-server.html
@@ -13,6 +13,7 @@
 coll="filmr"
 config='{"es": [["https://filmingrevolution.supdigital.org/": "https://fr4-sup.webrecorder.net/"]]}'
 replayBase="/replay/"
+deepLink="true"
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
 </body>
