--- a/fr-with-server.html
+++ b/fr-with-server.html
@@ -11,7 +11,7 @@
 <div class="header-label">Web Archive + Preserved Server</div>
 <replay-web-page
 coll="filmr"
-config='{"es": [["https://filmingrevolution.supdigital.org/": "https://fr4-sup.webrecorder.net/"]]}'
+config='{"es": [["https://filmingrevolution.supdigital.org/", "https://fr4-sup.webrecorder.net/"]]}'
 replayBase="/replay/"
 deepLink="true"
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
