--- a/replay/index.html
+++ b/replay/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-overflow">
 <head>
-<script src="https://replayweb.page/dist/frontend.js"></script>
+<script src="https://replayweb.page/frontend.js"></script>
 </head>
 <body>
 <app-main></app-main>
