--- a/fr-no-server.html
+++ b/fr-no-server.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<script src="http://localhost:9990/embed.js"></script>
+<script src="https://replayweb.page/embed.js"></script>
 <link href="./styles.css" rel="stylesheet"/>
 </head>
 <body>
