fix index.html again

--- a/replay/index.html
+++ b/replay/index.html
@@ -2,8 +2,9 @@
 <html class="no-overflow">
 <head>
 <script src="https://replayweb.page/ui.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<app-main></app-main>
+<replay-app-main></replay-app-main>
 </body>
 </html>
