--- a/fr-no-server.html
+++ b/fr-no-server.html
@@ -15,7 +15,7 @@ replayBase="/replay/"
 embed="replay"
 deepLink="true"
 config='{"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]}'
-source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
+source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.wacz"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
 </body>
 </html>
