--- a/fr-with-server.html
+++ b/fr-with-server.html
@@ -15,7 +15,7 @@ config='{"es": [["https://filmingrevolution.supdigital.org/", "https://fr4-sup.w
 replayBase="/replay/"
 embed="replay"
 deepLink="true"
-source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.zip"
+source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.wacz"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
 </body>
 </html>
