add blackquotidian! disable deep linking for filmingrev

--- a/index.html
+++ b/index.html
@@ -26,4 +26,17 @@
       </a>
     </div>
   </div>
+
+  <div class="flex-col">
+    <div class="column-half">
+      <a href="/blackquotidian.html">
+      <h2 class="center">Black Quotidian</h2>
+      <h4>Web Archive + Preserved Server</h4>
+      <span class="proj"><img src="https://www.sup.org/img/covers/med_large/pid_29420.jpg"></span>
+      </a>
+    </div>
+    <div style="" class="column-half">
+    </div>
+  </div>
+
 </article>
