--- a/fr-no-server.html
+++ b/fr-no-server.html
@@ -10,10 +10,8 @@
 </header>
 <div class="header-label">Web Archive Only</div>
 <replay-web-page
-coll="filmr-wao"
-replayBase="/replay/"
+coll="fr"
 embed="replay"
-deepLink="true"
 config='{"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]}'
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.wacz"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
