--- a/fr-with-server.html
+++ b/fr-with-server.html
@@ -10,11 +10,9 @@
 </header>
 <div class="header-label">Web Archive + Preserved Server</div>
 <replay-web-page
-coll="filmr"
+coll="fr-s"
 config='{"es": [["https://filmingrevolution.supdigital.org/", "https://fr4-sup.webrecorder.net/"]]}'
-replayBase="/replay/"
 embed="replay"
-deepLink="true"
 source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.wacz"
 url="https://filmingrevolution.supdigital.org/" ts="20200511161857"></replay-web-page>
 </body>
