add when-melodies-gather and enchanting-the-desert add nav to all archive pages, use just web archive only version for filming-revolution add logos locally

--- a/index.html
+++ b/index.html
@@ -5,38 +5,46 @@
 </head>
 <body>
 <header>
-<span class="logo"><img src="https://filmingrevolution.org/build/theme/assets/img/svg/marks/stanford_up_logotype.svg"></span>
-<h2 class="center">Publication Archives and Preserved Servers</h2>
+<span class="logo"><img src="/assets/sup_logo.svg"></span>
 </header>
+<h2 class="center">Stanford Digital Publication Web Archives and Preserved Servers</h2>
 
 <article>
   <div class="flex-col">
     <div class="column-half">
-      <a href="/fr-with-server.html">
-      <h2 class="center">Filming Revolution</h2>
-      <h4>Web Archive + Preserved Server</h4>
-      <span class="proj"><img src="https://www.sup.org/img/covers/med_large/pid_29289.jpg"></span>
+      <a href="/enchanting-the-desert.html">
+      <h2 class="center">Enchanting the Desert</h2>
+      <h4>Web Archive Only</h4>
+      <span class="proj"><img src="./assets/etd.jpg"></span>
       </a>
     </div>
+
     <div class="column-half">
-      <a href="/fr-no-server.html">
+      <a href="/filming-revolution.html">
       <h2 class="center">Filming Revolution</h2>
       <h4>Web Archive Only</h4>
-      <span class="proj"><img src="https://www.sup.org/img/covers/med_large/pid_29289.jpg"></span>
+      <span class="proj"><img src="./assets/fr.jpg"></span>
       </a>
     </div>
   </div>
 
   <div class="flex-col">
     <div class="column-half">
-      <a href="/blackquotidian.html">
+      <a href="/black-quotidian.html">
       <h2 class="center">Black Quotidian</h2>
       <h4>Web Archive + Preserved Server</h4>
-      <span class="proj"><img src="https://www.sup.org/img/covers/med_large/pid_29420.jpg"></span>
+      <span class="proj"><img src="./assets/bq.jpg"></span>
       </a>
     </div>
-    <div style="" class="column-half">
+
+    <div class="column-half">
+      <a href="/when-melodies-gather.html">
+      <h2 class="center">When Melodies Gather</h2>
+      <h4>Web Archive + Preserved Server</h4>
+      <span class="proj"><img src="./assets/wmg.jpg"></span>
+      </a>
     </div>
+
   </div>
 
 </article>
