add default viewport, use default embed mode

--- a/filming-revolution.html
+++ b/filming-revolution.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://replayweb.page/ui.js"></script>
     <link href="./styles.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
@@ -15,7 +16,6 @@
     </header>
     <replay-web-page
       coll="fr"
-      embed="replay"
       config='{"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]}'
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.wacz"
       url="https://filmingrevolution.supdigital.org/" ts="20200511161857">
