--- a/black-quotidian.html
+++ b/black-quotidian.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://replayweb.page/ui.js"></script>
     <link href="./styles.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
@@ -16,7 +17,6 @@
     <replay-web-page
       coll="bq"
       config='{"es": [["http://blackquotidian.supdigital.org/", "https://bq.sup.webrecorder.net"], ["https://blackquotidian.supdigital.org/", "https://bq.sup.webrecorder.net"]]}'
-      embed="replay"
       deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/bq.wacz"
       url="http://blackquotidian.supdigital.org/" ts="20200511161857">
