--- a/enchanting-the-desert.html
+++ b/enchanting-the-desert.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://replayweb.page/ui.js"></script>
     <link href="./styles.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
@@ -15,7 +16,6 @@
     </header>
     <replay-web-page
       coll="etd"
-      embed="replay"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/etd.wacz"
       url="http://enchantingthedesert.com/console/" ts="20170706223633">
     </replay-web-page>
