--- a/when-melodies-gather.html
+++ b/when-melodies-gather.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://replayweb.page/ui.js"></script>
     <link href="./styles.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
@@ -16,7 +17,6 @@
     <replay-web-page
       coll="wmg"
       config='{"es": [["http://whenmelodiesgather.supdigital.org/", "https://wmg.sup.webrecorder.net"], ["https://whenmelodiesgather.supdigital.org/", "https://wmg.sup.webrecorder.net"]]}'
-      embed="replay"
       deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/wmg.wacz"
       url="http://whenmelodiesgather.supdigital.org/" ts="20200511161857">
