update tcd fuzzy opts

--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -16,8 +16,9 @@
     </header>
     <replay-web-page
       coll="tcd"
-      config='{"fuzzy": [["http:\/\/a.tile.openstreetmap.org/(.*)", "https://a.tile.openstreetmap.org/$1"]]}'
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/tcd.wacz"
+      config='{"fuzzy": [["http:\/\/a.tile.openstreetmap.org\/(.*)", "https://a.tile.openstreetmap.org/$1"], ["https?:\/\/[bc].tiles.wmflabs.org\/(.*)", "http://a.tiles.wmflabs.org/$1"]]}'
+      source2="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/tcd.wacz"
+      source="/tcd.wacz"
       url="https://chinesedeathscape.supdigital.org/">
     </replay-web-page>
   </body>
