--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -17,8 +17,7 @@
     <replay-web-page
       coll="tcd"
       config='{"fuzzy": [["http:\/\/a.tile.openstreetmap.org\/(.*)", "https://a.tile.openstreetmap.org/$1"], ["https?:\/\/[bc].tiles.wmflabs.org\/(.*)", "http://a.tiles.wmflabs.org/$1"]]}'
-      source2="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/tcd.wacz"
-      source="/tcd.wacz"
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/tcd.wacz"
       url="https://chinesedeathscape.supdigital.org/">
     </replay-web-page>
   </body>
