update scalar embeds to point to intro pages instead of cover pages

--- a/constructing-the-sacred.html
+++ b/constructing-the-sacred.html
@@ -19,7 +19,7 @@
       config='{"es": [["http://constructingthesacred.supdigital.org/", "https://cts.sup.webrecorder.net"], ["https://constructingthesacred.supdigital.org/", "https://cts.sup.webrecorder.net"]]}'
       deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/cts.wacz"
-      url="http://constructingthesacred.supdigital.org/" ts="20200511161857">
+      url="http://constructingthesacred.supdigital.org/cts/introduction/" ts="20200511161857">
     </replay-web-page>
   </body>
 </html>
