--- a/when-melodies-gather.html
+++ b/when-melodies-gather.html
@@ -19,7 +19,7 @@
       config='{"es": [["http://whenmelodiesgather.supdigital.org/", "https://wmg.sup.webrecorder.net"], ["https://whenmelodiesgather.supdigital.org/", "https://wmg.sup.webrecorder.net"]]}'
       deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/wmg.wacz"
-      url="http://whenmelodiesgather.supdigital.org/" ts="20200511161857">
+      url="http://whenmelodiesgather.supdigital.org/wmg/introductory-page" ts="20200511161857">
     </replay-web-page>
   </body>
 </html>
