--- a/black-quotidian.html
+++ b/black-quotidian.html
@@ -19,7 +19,7 @@
       config='{"es": [["http://blackquotidian.supdigital.org/", "https://bq.sup.webrecorder.net"], ["https://blackquotidian.supdigital.org/", "https://bq.sup.webrecorder.net"]]}'
       deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/bq.wacz"
-      url="http://blackquotidian.supdigital.org/" ts="20200511161857">
+      url="http://blackquotidian.supdigital.org/bq/overview" ts="20200511161857">
     </replay-web-page>
   </body>
 </html>
