--- a/black-quotidian.html
+++ b/black-quotidian.html
@@ -10,16 +10,16 @@
       <a class="back-link" href="/"><img class="back" src="/assets/left-arrow.svg"/></a>
       <div class="heading">
         <div class="title">Black Quotidian</div>
-        <span class="subtitle">Web Archive + Preserved Server</span>
+        <span class="subtitle">Web Archive</span>
       </div>
       <span class="logo"><img src="/assets/sup_logo.svg"></span>
     </header>
     <replay-web-page
       coll="bq"
-      config='{"es": [["http://blackquotidian.supdigital.org/", "https://bq.sup.webrecorder.net"], ["https://blackquotidian.supdigital.org/", "https://bq.sup.webrecorder.net"]]}'
+      config='{"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]}'
       deepLink="true"
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/bq.wacz"
-      url="http://blackquotidian.supdigital.org/bq/overview" ts="20200511161857">
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/bqall.wacz"
+      url="http://blackquotidian.supdigital.org/bq/overview" ts="20200718001012">
     </replay-web-page>
   </body>
 </html>
