--- a/when-melodies-gather.html
+++ b/when-melodies-gather.html
@@ -10,16 +10,16 @@
       <a class="back-link" href="/"><img class="back" src="/assets/left-arrow.svg"/></a>
       <div class="heading">
         <div class="title">When Melodies Gather</div>
-        <span class="subtitle">Web Archive + Preserved Server</span>
+        <span class="subtitle">Web Archive</span>
       </div>
       <span class="logo"><img src="/assets/sup_logo.svg"></span>
     </header>
     <replay-web-page
       coll="wmg"
-      config='{"es": [["http://whenmelodiesgather.supdigital.org/", "https://wmg.sup.webrecorder.net"], ["https://whenmelodiesgather.supdigital.org/", "https://wmg.sup.webrecorder.net"]]}'
       deepLink="true"
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/wmg.wacz"
-      url="http://whenmelodiesgather.supdigital.org/wmg/introductory-page" ts="20200511161857">
+      config='{"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]}'
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/wmgall.wacz"
+      url="http://whenmelodiesgather.supdigital.org/wmg/introductory-page" ts="20200719033645">
     </replay-web-page>
   </body>
 </html>
