remove 'preserved servers', update cts starting url

--- a/constructing-the-sacred.html
+++ b/constructing-the-sacred.html
@@ -19,7 +19,7 @@
       deepLink="true"
       config='{"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]}'
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/ctsall.wacz"
-      url="http://constructingthesacred.supdigital.org/cts/introduction/" ts="20200720015059">
+      url="http://constructingthesacred.supdigital.org/cts/introduction" ts="20200720015059">
     </replay-web-page>
   </body>
 </html>
