project paths: update to new paths

--- a/black-quotidian.html
+++ b/black-quotidian.html
@@ -18,7 +18,7 @@
       coll="bq"
       config='{"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]}'
       deepLink="true"
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/bqall.wacz"
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/bq.wacz"
       url="http://blackquotidian.supdigital.org/bq/overview" ts="20200718001012">
     </replay-web-page>
   </body>
