--- a/constructing-the-sacred.html
+++ b/constructing-the-sacred.html
@@ -18,7 +18,7 @@
       coll="cts"
       deepLink="true"
       config='{"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]}'
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/ctsall.wacz"
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/cts.wacz"
       url="http://constructingthesacred.supdigital.org/cts/introduction" ts="20200720015059">
     </replay-web-page>
   </body>
