--- a/enchanting-the-desert.html
+++ b/enchanting-the-desert.html
@@ -16,7 +16,7 @@
     </header>
     <replay-web-page
       coll="etd"
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/etd.wacz"
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/etd.wacz"
       url="http://enchantingthedesert.com/console/" ts="20170706223633">
     </replay-web-page>
   </body>
