--- a/filming-revolution.html
+++ b/filming-revolution.html
@@ -17,7 +17,7 @@
     <replay-web-page
       coll="fr"
       config='{"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]}'
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/filmingrev.wacz"
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fr.wacz"
       url="https://filmingrevolution.supdigital.org/" ts="20200511161857">
     </replay-web-page>
   </body>
