--- a/when-melodies-gather.html
+++ b/when-melodies-gather.html
@@ -18,7 +18,7 @@
       coll="wmg"
       deepLink="true"
       config='{"fuzzy": [["(https?:\/\/.+)[?]path=.*", "$1"], ["(https?:\/\/.+)\\.\\d+", "$1"]]}'
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/wmgall.wacz"
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/wmg.wacz"
       url="http://whenmelodiesgather.supdigital.org/wmg/introductory-page" ts="20200719033645">
     </replay-web-page>
   </body>
