--- a/enchanting-the-desert.html
+++ b/enchanting-the-desert.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://replayweb.page/ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.0.2/ui.js"></script>
     <link href="./styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -17,7 +17,8 @@
     <replay-web-page
       coll="etd"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/etd.wacz"
-      url="http://enchantingthedesert.com/console/" ts="20170706223633">
+      url="http://enchantingthedesert.com/console/"
+      ts="20170706223633">
     </replay-web-page>
   </body>
 </html>
