--- a/filming-revolution.html
+++ b/filming-revolution.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://replayweb.page/ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.0.2/ui.js"></script>
     <link href="./styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -16,9 +16,10 @@
     </header>
     <replay-web-page
       coll="fr"
-      config='{"fuzzy": [["(https:\/\/filmingrevolution.supdigital.org/).*", "$1"]]}'
+      config='{"fuzzy": [["(https://filmingrevolution.supdigital.org/).*", "$1"]]}'
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fr.wacz"
-      url="https://filmingrevolution.supdigital.org/" ts="20200511161857">
+      url="https://filmingrevolution.supdigital.org/"
+      ts="20200511161857">
     </replay-web-page>
   </body>
 </html>
