--- a/when-melodies-gather.html
+++ b/when-melodies-gather.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.0.2/ui.js"></script>
-    <link href="./styles.css" rel="stylesheet"/>
+    <link href="./assets/styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
