add deepLink to tcd

--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -17,6 +17,7 @@
     <replay-web-page
       coll="tcd"
       config='{"fuzzy": [["http://a.tile.openstreetmap.org/(.*)", "https://a.tile.openstreetmap.org/$1"], ["https?://[bc].tiles.wmflabs.org/(.*)", "http://a.tiles.wmflabs.org/$1"]]}'
+      deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/tcd.wacz"
       url="https://chinesedeathscape.supdigital.org/"
       ts="202006025095310">
