add README template and generated README add with full text option for full-text-search enabled archives add default domain to options

--- a/black-quotidian.html
+++ b/black-quotidian.html
@@ -10,7 +10,7 @@
       <a class="back-link" href="/"><img class="back" src="/assets/left-arrow.svg"/></a>
       <div class="heading">
         <div class="title">Black Quotidian</div>
-        <span class="subtitle">Web Archive</span>
+        <span class="subtitle">Web Archivewith Text Search</span>
       </div>
       <span class="logo"><img src="/assets/sup_logo.svg"></span>
     </header>
