add hasText to wmg

--- a/when-melodies-gather.html
+++ b/when-melodies-gather.html
@@ -10,7 +10,7 @@
       <a class="back-link" href="/"><img class="back" src="/assets/left-arrow.svg"/></a>
       <div class="heading">
         <div class="title">When Melodies Gather</div>
-        <span class="subtitle">Web Archive</span>
+        <span class="subtitle">Web Archive with Text Search</span>
       </div>
       <span class="logo"><img src="/assets/sup_logo.svg"></span>
     </header>
