support relative paths update to replayweb.page 1.1.0 use new "page:0" to reference starting page

--- a/black-quotidian.html
+++ b/black-quotidian.html
@@ -1,25 +1,26 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.1.0-beta.1/ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.1.0/ui.js"></script>
     <link href="./assets/styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
-      <a class="back-link" href="/"><img class="back" src="/assets/left-arrow.svg"/></a>
+      <a class="back-link" href="./"><img class="back" src="./assets/left-arrow.svg"/></a>
       <div class="heading">
         <div class="title">Black Quotidian</div>
         <span class="subtitle">Web Archive with Text Search</span>
       </div>
-      <span class="logo"><img src="/assets/sup_logo.svg"></span>
+      <span class="logo"><img src="./assets/sup_logo.svg"></span>
     </header>
     <replay-web-page
       coll="bq"
       config='{"fuzzy": [["(https?://.+)[?]path=.*", "$1"], ["(https?://.+)\\.\\d+", "$1"]]}'
+      replayBase="./replay/"
       deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/bq.wacz"
-      url="http://blackquotidian.supdigital.org/bq/overview"
+      url="page:0"
       ts="20200718001012">
     </replay-web-page>
   </body>
