--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.3.15/ui.js"></script>
+    <script src="https://dev.replayweb.page/ui.js"></script>
     <link href="./assets/styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
