add noSandbox to disable sandbox on iframe to support PDFs

--- a/constructing-the-sacred.html
+++ b/constructing-the-sacred.html
@@ -19,6 +19,7 @@
       config='{"fuzzy": [["(https?://.+)[?]path=.*", "$1"], ["(https?://.+)\\.\\d+", "$1"]]}'
       replayBase="./replay/"
       deepLink="true"
+      noSandbox="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/cts.wacz"
       url="page:0"
       ts="20200720015059">
