--- a/enchanting-the-desert.html
+++ b/enchanting-the-desert.html
@@ -17,6 +17,7 @@
     <replay-web-page
       coll="etd"
       replayBase="./replay/"
+      noSandbox="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/etd.wacz"
       url="page:0"
       ts="20170706223633">
