--- a/filming-revolution.html
+++ b/filming-revolution.html
@@ -18,6 +18,7 @@
       coll="fr"
       config='{"fuzzy": [["(https://filmingrevolution.supdigital.org/).*", "$1"]]}'
       replayBase="./replay/"
+      noSandbox="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fr.wacz"
       url="page:0"
       ts="20200511161857">
