--- a/feral-atlas.html
+++ b/feral-atlas.html
@@ -19,6 +19,7 @@
       config='{"fuzzy": [["(https://feralatlas.supdigital.org/).*", "$1"]]}'
       replayBase="./replay/"
       deepLink="true"
+      noSandbox="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/fa.wacz"
       url="page:0"
       ts="20210416010824">
