--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.4.1/ui.js"></script>
+    <script src="https://replayweb.page/ui.js"></script>
     <link href="./assets/styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -20,7 +20,7 @@
       replayBase="./replay/"
       deepLink="true"
       noSandbox="true"
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/tcd.wacz"
+      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/tcd2.wacz"
       url="page:0"
       ts="202006025095310">
     </replay-web-page>
