--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -15,7 +15,7 @@
       <span class="logo"><img src="./assets/sup_logo.svg"></span>
     </header>
     <replay-web-page
-      coll="tcd"
+      coll="tcd2"
       config='{"fuzzy": [["http://a.tile.openstreetmap.org/(.*)", "https://a.tile.openstreetmap.org/$1"], ["https?://[bc].tiles.wmflabs.org/(.*)", "http://a.tiles.wmflabs.org/$1"]]}'
       replayBase="./replay/"
       deepLink="true"
