tcd: add liveRedirectOnNotFound option, switch to 1.4.3-beta.0

--- a/enchanting-the-desert.html
+++ b/enchanting-the-desert.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://replayweb.page/ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.4.3-beta.0/ui.js"></script>
     <link href="./assets/styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -19,6 +19,7 @@
       replayBase="./replay/"
       noSandbox="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/etd.wacz"
+      liveRedirectOnNotFound="true"
       url="page:0"
       ts="20170706223633">
     </replay-web-page>
