--- a/when-melodies-gather.html
+++ b/when-melodies-gather.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://replayweb.page/ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.4.3-beta.0/ui.js"></script>
     <link href="./assets/styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -21,6 +21,7 @@
       deepLink="true"
       noSandbox="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/wmg.wacz"
+      liveRedirectOnNotFound="true"
       url="page:0"
       ts="20200719033645">
     </replay-web-page>
