--- a/constructing-the-sacred.html
+++ b/constructing-the-sacred.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.4.3-beta.2/ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.4.3-beta.3/ui.js"></script>
     <link href="./assets/styles.css" rel="stylesheet"/>
     <link rel="shortcut icon" href="./assets/stanford_up_favicon.png">
     <link rel="apple-touch-icon" href="./assets/stanford_up_favicon.png">
@@ -18,7 +18,7 @@
     </header>
     <replay-web-page
       coll="cts2"
-      config='{"fuzzy": [["(https?://.+)[?]path=.*", "$1"], ["(https?://.+)\\.\\d+", "$1"], ["(http://.*external[?]link=https.*)prev=http%(.*)", "$1prev=https%$2"]], "liveRedirectOnNotFound": true}'
+      config='{"fuzzy": [["(https?://.+)[?]path=.*", "$1"], ["(https?://.+)\\.\\d+", "$1"], ["http://.*external[?]link=(http[^\u0026]+)\u0026.*$", "$1"]], "liveRedirectOnNotFound": true}'
       replayBase="./replay/"
       deepLink="true"
       noSandbox="true"
