--- a/feral-atlas.html
+++ b/feral-atlas.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.4.3/ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.4.4/ui.js"></script>
     <link href="./assets/styles.css" rel="stylesheet"/>
     <link rel="shortcut icon" href="./assets/stanford_up_favicon.png">
     <link rel="apple-touch-icon" href="./assets/stanford_up_favicon.png">
@@ -18,7 +18,7 @@
     </header>
     <replay-web-page
       coll="fa"
-      config='{"fuzzy": [["(https://feralatlas.supdigital.org/).*", "$1"]], "liveRedirectOnNotFound": true}'
+      config='{"fuzzy": [["(https://feralatlas.supdigital.org/).*", "$1"]], "liveRedirectOnNotFound": false}'
       replayBase="./replay/"
       deepLink="true"
       noSandbox="true"
