sp: add hasText metadata

--- a/shadow-plays.html
+++ b/shadow-plays.html
@@ -12,7 +12,7 @@
       <a class="back-link" href="./"><img class="back" src="./assets/left-arrow.svg"/></a>
       <div class="heading">
         <div class="title">Shadow Plays</div>
-        <span class="subtitle">Web Archive</span>
+        <span class="subtitle">Web Archive with Text Search</span>
       </div>
       <div class="container"><span class="logo"><img src="./assets/sup_logo.svg"></span><span class="colophon"><img src="./assets/stanford_up_logo.svg" width="50" height="50"></span></div>
     </header>
